@@ -86,9 +86,7 @@ def test_get_primes_fal():
     try:
         primes = khmer.get_n_primes_near_x(5, 5)
         assert 0, "previous statement should fail"
-    except AssertionError:
-        raise
-    except Exception as err:
+    except RuntimeError as err:
         assert "unable to find 5 prime numbers < 5" in str(err)
 
 
