@@ -21,6 +21,11 @@
    * tests/{test_normalize_by_median,test_script_arguments,test_scripts}.py:
    added tests for new code.
    * scripts/oxli: added script for running tests in development directory.
+   * khmer/{__init__,khmer_args}.py,tests/{test_normalize_by_median,
+   test_script_arguments}.py: refactored out use of AssertionError by not
+   throwing plain Exceptions when a ValueError or RuntimeError would do.
+   * oxli/__init__.py: give default help instead of an error when `oxli` is
+   called with no arguments.
 
 2015-07-27  Titus Brown  <titus@idyll.org>
 
